# GammaTrade

./: .env.example  .gitignore  API.md  ARCHITECTURE.md  Dockerfile.cpp_base  Dockerfile.python_base  GammaTradePlanning.drawio  README.md  SETUP.md  docker-compose.yml  entrypoint.cpp.sh  entrypoint.python.sh
common/: compile_protos.sh  execution_report.proto  trade_signal.proto
common/cpp/: Metrics.hpp
common/cpp/tests/: CMakeLists.txt  test_metrics.cpp
common/python/: __init__.py  metrics.py
common/python/tests/: test_metrics.py
execution/e_adapter_1_py/: main.py
execution/e_adapter_2_cpp/: CMakeLists.txt
execution/e_adapter_2_cpp/common/: external_data.proto  market_data.proto  strategy_config.proto
execution/e_adapter_2_cpp/include/: CoinbaseAuth.hpp  CoinbaseExecutionAdapter.hpp  RedisPublisher.hpp  RedisSubscriber.hpp
execution/e_adapter_2_cpp/src/: CoinbaseExecutionAdapter.cpp  RedisPublisher.cpp  RedisSubscriber.cpp  main.cpp
m_ingestion/m_adapter_1_py/: main.py
m_ingestion/m_adapter_2_cpp/: CMakeLists.txt
m_ingestion/m_adapter_2_cpp/include/: CoinbaseAdapter.hpp  RedisPublisher.hpp
m_ingestion/m_adapter_2_cpp/src/: CoinbaseAdapter.cpp  RedisPublisher.cpp  main.cpp
monitoring/dashboards/: fintech_dashboard.json
monitoring/prometheus/: prometheus.yml
o_ingestion/o_adapter_1_py/: main.py
processing/execution_router/: CMakeLists.txt
processing/execution_router/include/: ExecutionRouter.hpp  RedisClient.hpp  RiskManager.hpp
processing/execution_router/src/: ExecutionRouter.cpp  RedisClient.cpp  main.cpp
processing/execution_router/tests/: test_router_metrics.cpp
processing/strategy_engine/: main.py
processing/strategy_engine/tests/: test_strategy_metrics.py
storage/data_logger/: main.py
tests/: test_side_tracking.py
